--- a/texts/latex/reference.bib
+++ b/texts/latex/reference.bib
@@ -20,6 +20,20 @@
   edition =      "1st",
   year   = 2008,
   note =	"In Czech",
+}
+
+@ONLINE{titanium,
+  title = "Introducing the Next-Generation Mobile Platform",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://www.appcelerator.com/platform"
+}
+
+@ONLINE{titanium:api,
+  title = "Titanium Desktop 1.1 - API Reference",
+  cited = "9.\,5.\,2012",
+  year = 2012,
+  url = "http://developer.appcelerator.com/apidoc/desktop/latest/"
 } 
 
 @ONLINE{scrum,
