--- a/texts/latex/includes/analyza.tex
+++ b/texts/latex/includes/analyza.tex
@@ -1,6 +1,8 @@
 \chapter{Analýza}
 
-Pro vývoj aplikace v této bakalářské práci byla zvolena novější metodika vývoje, která je modernější a v mnoha ohledech jednodušší než dříve používaný Rational Unified Process (RUP)\cite{rup}. Hlavní výhoda spočívá v tom, že se nevytváří hromady dokumentů, jejichž vytvoření zabere spoustu času a ve finále je většina z nich zbytečná. RUP má smysl spíše u velkých projektů, na kterých pracuje větší tým lidí a které jsou hodně rozsáhlé. RUP a agilní metodiky se liší už ve způsobu sběru požadavků. Zatímco RUP je orientovaný na use-case modely, vytvářené obvykle v jazyce Unified Modeling Language (UML)\cite{uml}, agilní metodiky evidují požadavky tzv. user stories\cite{userstory}.
+Pro vývoj aplikace v této bakalářské práci byla zvolena novější metodika vývoje, která je modernější a v mnoha ohledech jednodušší než dříve používaný Rational Unified Process (RUP)\cite{rup}. Hlavní výhoda spočívá v tom, že se nevytváří hromady dokumentů, jejichž vytvoření zabere spoustu času a ve finále je většina z nich zbytečná. RUP má smysl spíše u velkých projektů, na kterých pracuje větší tým lidí a které jsou hodně rozsáhlé. 
+
+RUP a agilní metodiky se liší už ve způsobu sběru požadavků. Zatímco RUP je orientovaný na use-case modely, vytvářené obvykle v jazyce Unified Modeling Language (UML)\cite{uml}, agilní metodiky evidují požadavky v podobě tzv. user stories\cite{userstory}.
 
 \section{User stories}
 
@@ -9,11 +11,11 @@ Požadavky v rámci agilních metodik se nezapisují jako prosté úkoly, ale ma
 Jako \textbf{Uživatel}, chci \textbf{Funkcionalitu} abych dostal \textbf{Bussiness Value}
 \end{quote}
 
-Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a co to komu přinese. Má tak jistotu, že nedělá něco zbytečného. User story\cite{userstory} je takový krátký příbeh a jako takový je lidským mozkem snáz vnímaný.
+Takto formulovaný požadavek je pro člověka mnohem srozumitelnější, protože vidí proč daný úkol splnit a jaký je jeho přínos. Má tak jistotu, že nedělá něco zbytečného. User story je takový krátký příbeh a jako takový je lidským mozkem snáz vnímatelný.
 
-User stories poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud je v aplikace nalezen jejich \uv{odraz}, test byl úspěšný. Proto je lepší, aby user stories prošly schválením od zadavatele ještě před začátkem vývoje.
+User stories poslouží i po ukončení vývoje - při akceptačních testech. Stačí projít seznam user stories a pokud je v aplikace nalezen jejich \uv{odraz}, test byl úspěšný. Proto je lepší, aby user stories prošly schválením od zadavatele ještě před začátkem vývoje aplikace.
 
-V rámci této bakalářské práce byl vytvořen následující seznam user stories, který je pro lepší přehlednost rozdělen do bloků podle cílové skupiny. Každý blok je uveden názvem role, kde lomítko značí dědičnost. Jsou v něm zachyceny všechny požadavky, které by měla aplikace po ukončení vývoje splňovat.
+V rámci této bakalářské práce byl vytvořen následující seznam user stories, který je pro lepší přehlednost rozdělen do bloků podle cílové skupiny. Každý blok je uveden názvem role, kde lomítko značí \uv{dědičnost}. Jsou v něm zachyceny všechny požadavky, které by měla aplikace po ukončení vývoje splňovat.
 
 \subsection{Uživatel}
 
@@ -38,7 +40,7 @@ Jako uživatel chci:
 Jako vývojář chci:
 
 \begin{itemize}
-\item importovat projekty a úkoly z GitHubu (dále jen GH)
+\item importovat projekty a úkoly z verzovacích serverů
 \item být informován o blížící se deadline úkolů
 \item aby aplikace neumožňovala přístup neoprávněným osobám k mým úkolům
 \item spárovat úkol s konkrétním commitem do repozitáře
@@ -50,16 +52,16 @@ Jako vývojář chci:
 Jako senior vývojář chci: 
 
 \begin{itemize}
-\item párovat repozitáře z GH s mými projekty, abych mohl sledovat, jak práce na projektu pokračuje
-\item párovat issues z GH s mými úkoly, abych s nimi mohl párovat commity do GitHubu
+\item párovat repozitáře z verzovacích serverů s mými projekty, abych mohl sledovat, jak práce na projektu pokračuje
+\item párovat issues ze serveru s mými úkoly, abych s nimi mohl párovat commity
 \item nastavit úkolům čas, kdy mají být splněny
 \item delegovat úkoly junior vývojářům
 \item přiřadit úkol do konkrétního milníku, abych měl přehled o tom, kolik toho ještě zbývá dokončit
-\item být informován o změnách v mých repozitářích na GH
-\item uzavřít projekt, po jeho dokončení příp. ukončení
+\item být informován o změnách v mých repozitářích na serverech
+\item uzavřít projekt, po jeho dokončení příp. předčasném ukončení
 \item přidávat štítky k úkolům, abych je mohl lépe třídit a filtrovat
 \item být upozorněn na neaktivní otevřené projekty, abych mohl urgovat dokončení úkolů na junior vývojářích
-\item mazat úkoly, které se nakonec realizovat nebudou nebo které již byly dokončeny
+\item mazat úkoly, které se nakonec realizovat nebudou
 \item zpřesňovat zadání úkolů, pokud dojde k nejasnostem
 \end{itemize}
 
@@ -73,7 +75,7 @@ Jako junior vývojář chci:
 \end{itemize}
 
 \section{Doménový model}
-Z výše zmíněných user stories byl dalším kroku vytvořen seznam entit, které byly logicky provázány asociacemi. Pro lepší znázornění těchto entit a vztahů mezi nimi byl vytvořen doménové model v jazyce UML.
+Z výše zmíněných user stories byl v dalším kroku vytvořen seznam entit, které byly logicky provázány asociacemi. Pro lepší znázornění těchto entit a vztahů mezi nimi byl vytvořen doménové model v jazyce UML.
 
 \begin{figure}[h]
 	\includegraphics[keepaspectratio,width=16cm]{figures/domain-model}
@@ -87,7 +89,7 @@ Entita reprezentující jeden úkol, uložený v aplikaci. Má definované jmén
 \subsection{issueState}
 Úkoly (issues) existují v aplikaci v různých stavech. Každý stav určuje jak bude aplikace s daným úkolem zacházet.
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -108,7 +110,7 @@ Entita reprezentující jeden úkol, uložený v aplikaci. Má definované jmén
 \subsection{Label}
 Štítky (label) slouží k filtraci úkolů (issues) a projektů (projects). Obvykle popisují nějakou obecnější vlastnost dané entity, podle které má smysl je filtrovat. To může být například priorita, programovací jazyk nebo náročnost.
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -125,7 +127,7 @@ Entita reprezentující jeden úkol, uložený v aplikaci. Má definované jmén
 \subsection{Milestone}
 Milestone se do češtiny překládá jako milník. Je to nějaký bod v čase, do kterého musí být dokončená určitá množina úkolů (issues). Lze sledovat procentuální dokončení.
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -143,7 +145,7 @@ Milestone se do češtiny překládá jako milník. Je to nějaký bod v čase, 
 \subsection{User}
 Uživatel (user) vystupuje v aplikaci jako člen týmu, kterému je možné přiřadit nějaký úkol (issue).
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -161,7 +163,7 @@ Uživatel (user) vystupuje v aplikaci jako člen týmu, kterému je možné při
 \subsection{Project}
 Úkoly (issues) jsou uspořádané do projektů, které mají definované jméno a popis. I z úkolu se může stát projekt pokud je k jeho dokončení potřeba víc než jeden krok (podle GTD).
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -179,7 +181,7 @@ Uživatel (user) vystupuje v aplikaci jako člen týmu, kterému je možné při
 \subsection{projectState}
 Projekt může být buď aktivní, tzn. že se na něm pracuje, nebo dokončený.
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
@@ -198,7 +200,7 @@ Projekt může být buď aktivní, tzn. že se na něm pracuje, nebo dokončený
 
 Každý projekt má definovaný nějaký typ, podle kterého se určí na jaký server se má synchronizovat. Pokud jde o obyčejný projekt (default) nesynchronizuje se nikam, všechny úkoly zůstávají pouze na lokálním úložišti.
 
-\begin{table}
+\begin{table}[h]
 \begin{center}
 	\begin{tabular}{|c|l|}
 	\hline
